--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
     
     <h1>Biography</h1>
 
-    <p>I am a Research Assistant at IIIT Hyderabad, India.</p>
+    <p>I am a Research Assistant at IIIT Hyderabad, India. My research interest includes perception and navigation and planning in robotics, and segmentation and visual grounding in robotics. I have also worked in image processing in the past. </p>
 
 
     <div class="row">
