--- a/index.html
+++ b/index.html
@@ -807,8 +807,8 @@
     
     <h1>Biography</h1>
 
-    <p>I am a Research Assistant at IIIT Hyderabad, India. I am interested in perception and planning in Robotics, and Computer Vision. For my undergard thesis I worked with <a href="https://www.humphreyshi.com/" target="_blank" rel="noopener">Prof. Humphrey Shi</a> at 
-<a href="https://www.humphreyshi.com/people" target="_blank" rel="noopener"> at SHI Lab</a>. </p>
+    <p>I am a Research Assistant at IIIT Hyderabad, India. I am interested in perception and planning in Robotics, and Computer Vision. Earlier I worked with Prof. P.B Sujit at  Multi-robot Autonomy (MOON) Lab on navigation in offroad enviornments. For my undergard thesis I worked with <a href="https://www.humphreyshi.com/" target="_blank" rel="noopener">Prof. Humphrey Shi</a> at 
+<a href="https://www.humphreyshi.com/people" target="_blank" rel="noopener"> at Synergetic & Holistic Intelligence (SHI) Lab, USA</a>. I have also </p>
 
 
     <div class="row">
