--- a/publication/index.html
+++ b/publication/index.html
@@ -21,17 +21,17 @@
   
   
 
-  <meta name="author" content="Ishika Singh">
+  <meta name="author" content="Anukriti Singh">
 
   
   
   
     
   
-  <meta name="description" content="Undergrad, Computer Science majors">
+  <meta name="description" content="Research Assistant">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://ishikasingh.github.io/publication/">
+  <link rel="alternate" hreflang="en-us" href="https://anukritisinghh.github.io/publication/">
 
   
 
@@ -249,7 +249,7 @@
   
 
   
-  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Ishika Singh">
+  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Anukriti Singh">
   
 
   <link rel="manifest" href="/index.webmanifest">
@@ -271,11 +271,11 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="Ishika Singh">
-  <meta property="og:url" content="https://ishikasingh.github.io/publication/">
-  <meta property="og:title" content="Publications | Ishika Singh">
-  <meta property="og:description" content="Undergrad, Computer Science majors"><meta property="og:image" content="https://ishikasingh.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
-  <meta property="twitter:image" content="https://ishikasingh.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
+  <meta property="og:site_name" content="Anukriti Singh">
+  <meta property="og:url" content="https://anukritisinghh.github.io/publication/">
+  <meta property="og:title" content="Publications | Anukriti Singh">
+  <meta property="og:description" content="Research Assistant"><meta property="og:image" content="https://anukritisinghh.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="twitter:image" content="https://anukritisinghh.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
   
