--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
   
   
 
-  <section id="projects" class="home-section wg-experience   " style="padding: 20px 0 20px 0;" >
+ <!-- <section id="projects" class="home-section wg-experience   " style="padding: 20px 0 20px 0;" >
     <div class="container">
       
 
@@ -1338,7 +1338,7 @@
 </div>
 
     </div>
-  </section>
+  </section> -->
 
   
   
