--- a/index.html
+++ b/index.html
@@ -962,9 +962,9 @@
       <h3>Dark channel processing for medical image enhancement</h3>
 <p style="font-size:120%;">
       <b>Anukriti Singh</b>, Aditi Chandra, Rajesh Kumar, Kuldeep Singh, Nilanjan Dey <br />
-      <a href="https://ieeexplore.ieee.org/abstract/document/9019993">PDF</a>
+      
       <i>International WIE Conference on Electrical and Computer Engineering<a href="https://2020.wiecon-ece.org/"> (WIECON-ECE)</a>, 2019 </i> <br />
-      <a href="https://arxiv.org/abs/2006.10559">arXiv</a> / 
+      <a href="https://ieeexplore.ieee.org/abstract/document/9019993">PDF</a> / 
       <a href="https://github.com/anukritisinghh/medical-image-enhancement">code</a> </td> </p>
 <!--     <td>94</td> -->
 </table>
