--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
     
     <h1>Biography</h1>
 
-    <p>I am a graduate student at University of Maryland, College Park and a Research Assistant at <a href="https://raaslab.org/" target="_blank" rel="noopener">RAAS LAB</a> . I am interested in perception in Robotics, and Computer Vision. Earlier I worked at IIIT Hyderabad, India on visual servoing and also with <a href="https://eecs.iiserb.ac.in/faculty_profile.php?id=OQ==&lname=c3VqaXQ=" target="_blank" rel="noopener">Prof. P.B Sujit</a> at  <a href="https://www.humphreyshi.com/people" target="_blank" rel="noopener">Multi-robot Autonomy (MOON) Lab</a> on navigation in offroad enviornments. For my undergard thesis I worked with <a href="https://sites.google.com/view/m00nlab/home?authuser=0" target="_blank" rel="noopener">Prof. Humphrey Shi</a> at 
+    <p>I am a graduate student at University of Maryland, College Park and a Research Assistant at <a href="https://raaslab.org/" target="_blank" rel="noopener">RAAS LAB</a>. I am currently working on image reconstruction for robotics navigation. Earlier I worked at IIIT Hyderabad, India on visual servoing and also with <a href="https://eecs.iiserb.ac.in/faculty_profile.php?id=OQ==&lname=c3VqaXQ=" target="_blank" rel="noopener">Prof. P.B Sujit</a> at  <a href="https://www.humphreyshi.com/people" target="_blank" rel="noopener">Multi-robot Autonomy (MOON) Lab</a> on navigation in offroad enviornments. For my undergard thesis I worked with <a href="https://sites.google.com/view/m00nlab/home?authuser=0" target="_blank" rel="noopener">Prof. Humphrey Shi</a> at 
 <a href="https://www.humphreyshi.com/people" target="_blank" rel="noopener">Synergetic & Holistic Intelligence (SHI) Lab, USA</a>. I have also got the opportunity to work on quantum computation and machine learning during my summer internship at Indian Institute of Science Education and Research (IISER), Pune with Prof. T. S. Mahesh. My journey in research started in year 2018 with my first internship at RAMAN Lab with Prof. Rajesh Kumar, where I worked on various image processing pipelines. </p>
 
 
@@ -945,7 +945,7 @@
     <td style="width:70%;vertical-align:middle">
       <h3>SeMask: Semantically Masked Transformers for Semantic Segmentation</h3>
 <p style="font-size:120%;">
- Jitesh Jain, <b>Anukriti Singh</b>,  Nikita Orlov, Zilong Huang, Jiachen Li1, Steven Walton, Humphrey Shi <br />
+ Jitesh Jain, <b>Anukriti Singh</b>,  Nikita Orlov, Zilong Huang, Jiachen Li, Steven Walton, Humphrey Shi <br />
       <a href="https://arxiv.org/abs/2112.12782">arXiv</a>
       </td> </p>
 <!--     <td>94</td> -->
@@ -972,7 +972,7 @@
 <!--     <td>94</td> -->
   </tr>                                             
   <tr>
-    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/fnas-ps-1.png"></td>
+    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/dark.png"></td>
     <td style="width:70%;vertical-align:middle">
       <h3>Dark channel processing for medical image enhancement</h3>
 <p style="font-size:120%;">
