--- a/index.html
+++ b/index.html
@@ -808,9 +808,8 @@
     <h1>Biography</h1>
 
     <p>I am a graduate student at the University of Maryland, College Park, and a Research Assistant at <a href="https://raaslab.org/" target="_blank" rel="noopener">RAAS LAB</a>. 
-      My current research focuses on image reconstruction for robotics navigation and reinforcement learning. I recently interned with Nokia Bell Labs <a href="https://www.bell-labs.com/" target="_blank" rel="noopener"> for the summers, where I worked on object pose estimation. 
-
-        </p> -->
+      My current research focuses on image reconstruction for robotics navigation and reinforcement learning. I recently interned with <a href="https://www.bell-labs.com/" target="_blank" rel="noopener">Nokia Bell Labs</a>.
+      for the summers, where I worked on object pose estimation.    </p> -->
 <!--       In the past, I have worked on object pose estimation, segmentation, image-based visual servoing, and visual grounding at prestigious places like Nokia Bell Labs, Picsart AI Research, IIIT  -->
       
 <!--       Earlier I worked at IIIT Hyderabad, India on visual servoing and also with <a href="https://eecs.iiserb.ac.in/faculty_profile.php?id=OQ==&lname=c3VqaXQ=" target="_blank" rel="noopener">
