--- a/index.html
+++ b/index.html
@@ -1012,11 +1012,11 @@
 
   <div class="alert alert-note">
   <div>
-    For a list of my research works, please lookup my <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=G4gza-gAAAAJ">google-scholar</a>.
+    For a list of my research works, please look at my <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=G4gza-gAAAAJ">google-scholar</a>.
   </div>
   </div>
   <tr>
-    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/semask.png"></td>
+    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/fig_1.png"></td>
     <td style="width:70%;vertical-align:middle">
       <h3>FLIP-TD: Free Lunch Inpainting on Top-Down Images for Robotic Tasks</h3>
 <p style="font-size:120%;">
@@ -1056,7 +1056,7 @@
       </td> </p>
 <!--     <td>94</td> -->
   </tr>                                             
-  <tr>
+<!--   <tr>
     <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/dark.png"></td>
     <td style="width:70%;vertical-align:middle">
       <h3>Dark channel processing for medical image enhancement</h3>
@@ -1065,7 +1065,7 @@
       
       <i>International WIE Conference on Electrical and Computer Engineering<a href="https://2020.wiecon-ece.org/"> (WIECON-ECE)</a>, 2019 </i> <br />
       <a href="https://ieeexplore.ieee.org/abstract/document/9019993">PDF</a> / 
-      <a href="https://github.com/anukritisinghh/medical-image-enhancement">code</a> </td> </p>
+      <a href="https://github.com/anukritisinghh/medical-image-enhancement">code</a> </td> </p> -->
 <!--     <td>94</td> -->
 </table>
 
