--- a/index.html
+++ b/index.html
@@ -1015,24 +1015,26 @@
     For a list of my research works, please look at my <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=G4gza-gAAAAJ">google-scholar</a>.
   </div>
   </div>
+    
   <tr>
-    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/fig_1.png"></td>
+    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/fig_1.png" width="100" height="100"></td>
     <td style="width:70%;vertical-align:middle">
       <h3>FLIP-TD: Free Lunch Inpainting on Top-Down Images for Robotic Tasks</h3>
-<p style="font-size:120%;">
- <b>Anukriti Singh</b>*, Vishnu Dutt Sharma*, Pratap Tokekar <br />
-      <a href="https://openreview.net/forum?id=7c0WHyETaHC">ICRA Workshop 2023</a>
-      </td> </p>
-<!--     <td>94</td> -->
+      <p style="font-size:120%;">
+        <b>Anukriti Singh</b>*, Vishnu Dutt Sharma*, Pratap Tokekar <br />
+        <a href="https://openreview.net/forum?id=7c0WHyETaHC">ICRA Workshop 2023</a>
+      </p>
+    </td>
   </tr>
   <tr>
-    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/semask.png"></td>
+    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/semask.png" width="100" height="100"></td>
     <td style="width:70%;vertical-align:middle">
       <h3>SeMask: Semantically Masked Transformers for Semantic Segmentation</h3>
-<p style="font-size:120%;">
- Jitesh Jain, <b>Anukriti Singh</b>,  Nikita Orlov, Zilong Huang, Jiachen Li, Steven Walton, Humphrey Shi <br />
-      <a href="https://arxiv.org/abs/2112.12782">ICCV Workshop 2023</a>
-      </td> </p>
+      <p style="font-size:120%;">
+        Jitesh Jain, <b>Anukriti Singh</b>,  Nikita Orlov, Zilong Huang, Jiachen Li, Steven Walton, Humphrey Shi <br />
+        <a href="https://arxiv.org/abs/2112.12782">ICCV Workshop 2023</a>
+      </p>
+    </td>
 <!--     <td>94</td> -->
   </tr>                                                                            
 <!--   <tr>
