--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
   </div>
     
   <tr>
-    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/fig_1.png" width="200" height="200"></td>
+    <td style="width:30%;vertical-align:middle"><img src="https://anukritisinghh.github.io/files/fig_1_1.png" width="200" height="200"></td>
     <td style="width:70%;vertical-align:middle">
       <h3>FLIP-TD: Free Lunch Inpainting on Top-Down Images for Robotic Tasks</h3>
       <p style="font-size:120%;">
