--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
         
         
          <li>
-          <a href="https://drive.google.com/file/d/1DkNH-_c8T_0CjEM_11MPpyMV_lSJ5yS2/view"  aria-label="cv">
+          <a href="https://drive.google.com/file/d/1UClwLeZfFHOfKym77IylMbipVT69Lp6U/view?usp=sharing"  aria-label="cv">
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
