--- a/index.html
+++ b/index.html
@@ -956,6 +956,9 @@
   <div class="col-12 col-lg-8">
     <ul>
 <li>
+<p><strong>[January 2024]</strong>: <a href="https://arxiv.org/abs/2310.07021" target="_blank" rel="noopener">SeMask</a> is accepted to <span style="color:orange; style:bold;">ICRA 2024!</span></p>
+</li>
+<li>
 <p><strong>[August 2023]</strong>: <a href="https://github.com/Picsart-AI-Research/SeMask-Segmentation" target="_blank" rel="noopener">SeMask</a> is accepted to <span style="color:orange; style:bold;">NIVT Workshop at ICCV 2023!</span></p>
 </li>
 <li>
