--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
   <div class="col-12 col-lg-8">
     <ul>
 <li>
-<p><strong>[January 2024]</strong>: <a href="https://arxiv.org/abs/2310.07021" target="_blank" rel="noopener">SeMask</a> is accepted to <span style="color:orange; style:bold;">ICRA 2024!</span></p>
+<p><strong>[January 2024]</strong>: <a href="https://arxiv.org/abs/2310.07021" target="_blank" rel="noopener">Pre-Trained Masked Image Model for Mobile Robot Navigation</a> is accepted to <span style="color:orange; style:bold;">ICRA 2024!</span></p>
 </li>
 <li>
 <p><strong>[August 2023]</strong>: <a href="https://github.com/Picsart-AI-Research/SeMask-Segmentation" target="_blank" rel="noopener">SeMask</a> is accepted to <span style="color:orange; style:bold;">NIVT Workshop at ICCV 2023!</span></p>
@@ -971,7 +971,7 @@
 <p><strong>[August 2022]</strong>: I started grad school at <a href="https://umd.edu/" target="_blank" rel="noopener">University of Maryland, College Park</a> in Robotics </p>
 </li>
 <li>
-<p><strong>[May 2022]</strong>: Got accepted at <a href="https://www.oxfordml.school/" target="_blank" rel="noopener">Oxford Machine Learning Summer School 2024</a> held in UK!</p>
+<p><strong>[May 2022]</strong>: Got accepted at <a href="https://www.oxfordml.school/" target="_blank" rel="noopener">Oxford Machine Learning Summer School 2023</a> held in UK!</p>
 </li>
 <!-- <li>
 <p><strong>[March 2021]</strong>: Graduated from IIT Roorkee with a Bachelor&rsquo;s in Computer Science and Engineering!</p>
