--- a/index.html
+++ b/index.html
@@ -956,6 +956,12 @@
   <div class="col-12 col-lg-8">
     <ul>
 <li>
+<p><strong>[February 2024]</strong>: Won the travel grant to attend <a href="https://2024.ieee-icra.org/ target="_blank" rel="noopener">ICRA 2024</a> in Yokohama, Japan</p>
+</li>
+<li>
+<p><strong>[February 2024]</strong>: Joining <a href="https://www.bell-labs.com/" target="_blank" rel="noopener">Bell Labs</a> as a Spring co-op research intern!</p>
+</li>
+<li>
 <p><strong>[January 2024]</strong>: <a href="https://arxiv.org/abs/2310.07021" target="_blank" rel="noopener">Pre-Trained Masked Image Model for Mobile Robot Navigation</a> is accepted to <span style="color:orange; style:bold;">ICRA 2024!</span></p>
 </li>
 <li>
