--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
       <div class="col py-2">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">Bell Labs Robotics Intern</h4>
+            <h4 class="card-title exp-title text-muted mt-0 mb-1">Bell Labs Robotics Co-op</h4>
             <h4 class="card-title exp-company text-muted my-0"><a href="https://www.bell-labs.com/" target="_blank" rel="noopener"> Nokia Bell Labs</a></h4>
             <div class="text-muted exp-meta">
               Feb 2024 –
