--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
             <!-- New Publication Rows (Latest First) -->
             <tr>
               <td style="width:30%;vertical-align:middle">
-                <img src="https://via.placeholder.com/150" width="150" height="150" alt="Sketch-to-Skill">
+                <img src="/files/sketch.png" width="150" height="150" alt="Sketch-to-Skill">
               </td>
               <td style="width:70%;vertical-align:middle">
                 <h3>Sketch-to-Skill: Bootstrapping Robot Learning with Human Drawn Trajectory Sketches</h3>
@@ -1029,7 +1029,7 @@
             </tr>
             <tr>
               <td style="width:30%;vertical-align:middle">
-                <img src="https://via.placeholder.com/150" width="150" height="150" alt="REBEL">
+                <img src="/files/rebel.png" width="150" height="150" alt="REBEL">
               </td>
               <td style="width:70%;vertical-align:middle">
                 <h3>REBEL: A Regularization-Based Solution for Reward Overoptimization in Robotic Reinforcement Learning from Human Feedback</h3>
@@ -1082,6 +1082,7 @@
     </div>
   </div>
 </section>
+
 
 
   
