--- a/index.html
+++ b/index.html
@@ -927,11 +927,15 @@
 <section id="news" class="home-section wg-blank">
   <div class="home-section-bg"></div>
   <div class="container">
+    <!-- Row for Heading -->
     <div class="row">
-      <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
+      <div class="col-12 text-center mb-4">
         <h1 class="mb-0">News</h1>
       </div>
-      <div class="col-12 col-lg-8">
+    </div>
+    <!-- Row for News List -->
+    <div class="row">
+      <div class="col-12">
         <ul>
           <li>
             <p><strong>[January 2025]</strong>: Starting my PhD at <a href="https://umd.edu/" target="_blank" rel="noopener">UMD College Park</a>!</p>
@@ -962,6 +966,7 @@
     </div>
   </div>
 </section>
+
 
   
   
