--- a/index.html
+++ b/index.html
@@ -927,15 +927,15 @@
 <section id="news" class="home-section wg-blank">
   <div class="home-section-bg"></div>
   <div class="container">
-    <!-- Row for Heading -->
+    <!-- Row for the heading -->
     <div class="row">
-      <div class="col-12 text-center mb-4">
+      <div class="col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-start">
         <h1 class="mb-0">News</h1>
       </div>
     </div>
-    <!-- Row for News List -->
+    <!-- Row for the news list -->
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 col-lg-8">
         <ul>
           <li>
             <p><strong>[January 2025]</strong>: Starting my PhD at <a href="https://umd.edu/" target="_blank" rel="noopener">UMD College Park</a>!</p>
