--- a/index.html
+++ b/index.html
@@ -927,14 +927,10 @@
 <section id="news" class="home-section wg-blank">
   <div class="home-section-bg"></div>
   <div class="container">
-    <!-- Row for the heading -->
     <div class="row">
-      <div class="col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-start">
+      <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
         <h1 class="mb-0">News</h1>
       </div>
-    </div>
-    <!-- Row for the news list -->
-    <div class="row">
       <div class="col-12 col-lg-8">
         <ul>
           <li>
@@ -966,6 +962,7 @@
     </div>
   </div>
 </section>
+
 
 
   
