--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 
       <div class="portrait-title">
         <h2>Anukriti Singh</h2>
-        <h3>Master's student</h3>
+        <h3>PhD student</h3>
 
         
         <h3>
