--- a/index.html
+++ b/index.html
@@ -1008,6 +1008,21 @@
                 </p>
               </td>
             </tr>
+
+                        <!-- 3. Pre-Trained Masked Image Model for Mobile Robot Navigation (ICRA 2024) -->
+            <tr>
+              <td style="width:30%;vertical-align:middle">
+                <img src="/files/ptmi.png" width="150" height="150" 
+                     alt="Pre-Trained Masked Image Model for Mobile Robot Navigation">
+              </td>
+              <td style="width:70%;vertical-align:middle">
+                <h3>Pre-Trained Masked Image Model for Mobile Robot Navigation</h3>
+                <p style="font-size:120%;">
+                  Vishnu Dutt Sharma, <b>Anukriti Singh</b>, Pratap Tokekar<br />
+                  <a href="https://arxiv.org/pdf/2310.07021" target="_blank" rel="noopener">ICRA 2024 (arXiv preprint)</a>
+                </p>
+              </td>
+            </tr>
             <!-- Existing Publication Rows -->
             <tr>
               <td style="width:30%;vertical-align:middle">
