--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                 <h3>REBEL: A Regularization-Based Solution for Reward Overoptimization in Robotic Reinforcement Learning from Human Feedback</h3>
                 <p style="font-size:120%;">
                   Souradip Chakraborty*, <b>Anukriti Singh</b>*, Amisha Bhaskar, Pratap Tokekar, Dinesh Manocha, Amrit Singh Bedi<br />
-                  <a href="https://arxiv.org/abs/2312.14436v2" target="_blank" rel="noopener">arXiv:2312.14436v2</a>
+                  <a href="https://arxiv.org/abs/2312.14436v2" target="_blank" rel="noopener">Link</a>
                 </p>
               </td>
             </tr>
