--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
                 <h3>Pre-Trained Masked Image Model for Mobile Robot Navigation</h3>
                 <p style="font-size:120%;">
                   Vishnu Dutt Sharma, <b>Anukriti Singh</b>, Pratap Tokekar<br />
-                  <a href="https://arxiv.org/pdf/2310.07021" target="_blank" rel="noopener">ICRA 2024 (arXiv preprint)</a>
+                  <a href="https://arxiv.org/pdf/2310.07021" target="_blank" rel="noopener">ICRA 2024</a>
                 </p>
               </td>
             </tr>
